# ccxt_rate_limiter

./: README.md  setup.cfg
.github/workflows/: python-app.yml
ccxt_rate_limiter/: __init__.py  binance.py  bybit.py  ftx.py  kraken.py  okex.py  rate_limiter.py  rate_limiter_group.py
tests/: test_binance.py  test_bybit.py  test_ftx.py  test_kraken.py  test_okex.py  test_rate_limiter.py  test_rate_limiter_group.py  test_scale_limits.py  test_wrap_object.py  wrap_object_test_helper.py
