[metadata]
name = ccxt_rate_limiter
version = 0.0.5
author = richmanbtc
description = add rate limiting to ccxt
long_description = file:README.md
long_description_content_type=text/markdown
url = https://github.com/richmanbtc/ccxt_rate_limiter
license = CC0
classifier =
    Development Status :: 1 - Planning
    Programming Language :: Python
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
packages = find:

[options.packages.find]
exclude =
    tests
